[package]
name = "nuckrelay"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = "0.26.2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
futures-util = "0.3"
base64 = "0.22.1"
url = "2.4.1"
clap = { version = "4.0", features = ["derive", "env"] }
