[package]
name = "nuckrelay"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
futures-util = "0.3"
base64 = "0.22.1"
url = "2.4.1"
clap = { version = "4.0", features = ["derive", "env"] }
bytes = "1.8"
rust-crypto = "0.2.36"
